--- a/tutor2/q7.html
+++ b/tutor2/q7.html
@@ -15,16 +15,26 @@
             <input id="field2" type="text" value="Field 2">
         </form>
 
-        <p id="textNotIn"></p>
+        <p id="result"></p>
 
         <script>
             let field1 = document.getElementById("field1");
             let field2 = document.getElementById("field2");
             field1.addEventListener("blur", function(){
-                document.getElementById("textNotIn").innerText = "Text not in!"
+                const currentTime = new Date().toLocaleString();
+                document.getElementById("result").innerText = "Text not in!" + currentTime
             });
             field2.addEventListener("blur", function(){
-                document.getElementById("textNotIn").innerText = "Ahh, text not in!"
+                const currentTime = new Date().toLocaleString();
+                document.getElementById("result").innerText = "Ahh, text not in!" + currentTime
+            });
+            field1.addEventListener("focus", function(){
+                const currentTime = new Date().toLocaleString();
+                document.getElementById("result").innerText = "Text in!" + currentTime
+            });
+            field2.addEventListener("focus", function(){
+                const currentTime = new Date().toLocaleString();
+                document.getElementById("result").innerText = "Ahh, text in!" + currentTime
             });
         </script>
     </body>
